[gd_scene load_steps=5 format=2]

[ext_resource path="res://Helpers/Transitioner.tscn" type="PackedScene" id=1]
[ext_resource path="res://Menus/Intro/Intro.gd" type="Script" id=2]
[ext_resource path="res://Menus/Intro/itnetwork_summer_2020.png" type="Texture" id=3]
[ext_resource path="res://Menus/Intro/ictsocial_summer_2020.png" type="Texture" id=4]

[node name="Intro" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CzechTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="EnglishTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Czech" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="English" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Transitioner" parent="." instance=ExtResource( 1 )]
[connection signal="timeout" from="CzechTimer" to="." method="_on_CzechTimer_timeout"]
[connection signal="timeout" from="EnglishTimer" to="." method="_on_EnglishTimer_timeout"]
[connection signal="transition_finished" from="Transitioner" to="." method="_on_Transitioner_transition_finished"]
